Your commit message here

--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,8 @@
         
       </div>
       <div id="history-container">
-        <h3>Calculation History</h3>
+        <h3><b>Calculation History</b></h3>
+        <br></br>
         <ul id="history-list"></ul>
       </div>
     
